--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^2.43.4",
     "axios": "^1.7.2",
     "react": "^18.2.0",
+    "react-compare-image": "^3.4.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
     "react-scrollspy": "^3.4.3",
