--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.22.1",
     "react-scrollspy": "^3.4.3",
     "react-select": "^5.8.0",
+    "sweetalert2": "^11.11.0",
     "swiper": "^11.0.6"
   },
   "devDependencies": {
