--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-compare-image": "^3.4.0",
     "react-dom": "^18.2.0",
+    "react-image-size": "^2.3.2",
     "react-router-dom": "^6.22.1",
     "react-scrollspy": "^3.4.3",
     "react-select": "^5.8.0",
