--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@supabase/supabase-js": "^2.43.4",
     "axios": "^1.7.2",
     "firebase": "^10.12.2",
@@ -17,6 +18,7 @@
     "react-compare-image": "^3.4.0",
     "react-dom": "^18.2.0",
     "react-image-size": "^2.3.2",
+    "react-photo-view": "^1.2.6",
     "react-router-dom": "^6.22.1",
     "react-scrollspy": "^3.4.3",
     "react-select": "^5.8.0",
